2003-03-25  Roland McGrath  <roland@redhat.com>

	* config.make.in (enable-check-abi): New variable from configure.
	* configure.in (enable_check_abi): New substituted variable,
	controlled by --{enable,disable}-check-abi (default yes).
	* configure: Regenerated.
	* Makerules [$(enable-check-abi) = yes] (tests): Put this condition
	on check-abi dependency.

2003-03-26  Andreas Schwab  <schwab@suse.de>

	* sysdeps/m68k/m68020/bits/atomic.h: Fix typos.
	* include/atomic.h: Likewise.

	* sysdeps/unix/sysv/linux/m68k/sysdep.h: Define ret_NOERRNO.

2003-03-25  Roland McGrath  <roland@redhat.com>

	* sysdeps/powerpc/bits/atomic.h (__arch_atomic_exchange_32): New macro.
	(__arch_atomic_exchange_64): New macro.
	(atomic_exchange): Use them.
	(__arch_atomic_exchange_and_add_32): New macro.
	(__arch_atomic_exchange_and_add_64): New macro.
	(atomic_exchange_and_add): Use them.
	Original patch from Steven Munroe <sjmunroe@us.ibm.com>.

2003-03-25  Alexandre Oliva  <aoliva@redhat.com>

	* sysdeps/mips/sgidefs.h (_MIPS_ISA_MIPS32, _MIPS_ISA_MIPS64):
	Define.
	* sysdeps/mips/sys/asm.h: Test _MIPS_ISA against them on all
	ISA tests.
	(ALSZ, ALMASK, SZREG, REG_S, REG_L): Define based on ABI, not ISA.
	(PTR_ADD, etc): Test _MIPS_SZPTR instead of _MIPS_SZLONG.
	* sysdeps/unix/sysv/linux/mips/bits/sigaction.h: Use _MIPS_SZPTR
	to decide whether to add padding.
	* sysdeps/unix/sysv/linux/mips/bits/sigaction.h: Use _MIPS_SZPTR
	to decide whether to add padding.
	* sysdeps/unix/sysv/linux/mips/kernel_sigaction.h (struct
	old_kernel_sigaction): Likewise.

2003-03-25  Ulrich Drepper  <drepper@redhat.com>

	* csu/tst-atomic.c: Adjust tests to what atomic_add_negative and
	atomic_add_zero were supposed to do.
	* include/atomic.h: Adjust atomic_add_negative and atomic_add_zero
	to x86 behavior.

	* sysdeps/generic/bits/typesizes.h (__TIMER_T_TYPE): Define as void*.
	This matches the new timer implementation.
	* sysdeps/unix/sysv/linux/sparc/bits/typesizes.h (__TIMER_T_TYPE):
	Likewise.