@@ -148,20 +148,15 @@ __chown_is_lchown (const char *file, uid_t owner, gid_t group)
 #endif
 
 #if SHLIB_COMPAT (libc, GLIBC_2_0, GLIBC_2_1)
-strong_alias (__chown_is_lchown, _chown_is_lchown)
-compat_symbol (libc, __chown_is_lchown, __chown, GLIBC_2_0);
-compat_symbol (libc, _chown_is_lchown, chown, GLIBC_2_0);
+compat_symbol (libc, __chown_is_lchown, chown, GLIBC_2_0);
 #endif
 
 #ifdef __NR_lchown
-strong_alias (__real_chown, _real_chown)
-versioned_symbol (libc, __real_chown, __chown, GLIBC_2_1);
-versioned_symbol (libc, _real_chown, chown, GLIBC_2_1);
-libc_hidden_ver (__real_chown, __chown)
+versioned_symbol (libc, __real_chown, chown, GLIBC_2_1);
+strong_alias (__real_chown, __chown)
 #else
 strong_alias (__chown_is_lchown, __chown_is_lchown21)
-strong_alias (__chown_is_lchown, _chown_is_lchown21)
-versioned_symbol (libc, __chown_is_lchown21, __chown, GLIBC_2_1);
-versioned_symbol (libc, _chown_is_lchown21, chown, GLIBC_2_1);
-libc_hidden_ver (__chown_is_lchown, __chown)
+versioned_symbol (libc, __chown_is_lchown21, chown, GLIBC_2_1);
+strong_alias (__chown_is_lchown, __chown)
 #endif
+libc_hidden_def (__chown)
